Moves the style.css file and fixes the RTL languages alignment

--- a/style/style.scss
+++ b/style/style.scss
@@ -126,12 +126,10 @@ footer{
 
 .hebrew{
   font-family: 'Rubik', sans-serif;
-  text-align: right;
 }
 
 .arabic{
   font-family: 'Tajawal', sans-serif;
-  text-align: right;
 }
 
 .popup{
